# tesseract-recognize

./: .bumpversion.cfg  .dockerignore  .githook-pre-commit  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile-pkg  Dockerfile-pkg-langs  Dockerfile_build.sh  Dockerfile_github-master  Dockerfile_ubuntu-langs  Dockerfile_ubuntu-pkg  Dockerfile_ubuntu18.04-github-master  Dockerfile_ubuntu18.04-pkg  Dockerfile_ubuntu18.04-pkg-langs  LICENSE.md  PageXML.cc  PageXML.h  README.md  githook-pre-commit  mock_cv.h  tesseract-recognize-docker  tesseract-recognize.cc  tesseract_recognize_api.py  tesseract_recognize_api_requirements.txt
dockerfiles/: Dockerfile  Dockerfile_3.04  Dockerfile_ubuntu16.04-github-master  Dockerfile_ubuntu16.04-pkg  Dockerfile_ubuntu18.04-github-master  Dockerfile_ubuntu18.04-pkg  tesseract-recognize-docker
